2014-07-28  Mario Lang  <mlang@delysid.org>

	* chess-display.el (chess-display-draw-square): Add docstring.

	* chess-database.el (chess-database-do-open): Require modules here.
	(chess-database-open): Instead of only requiring modules from
	`chess-database-modules'.

	* chess-pgn.el (chess-pgn-read-plies): Avoid copying comments
	(annotations in PGN-jargon) to all following positions in a game.
	(chess-create-display): Declare.

	* chess-ics1.el (chess-debug-position): Use `chess-display-position'
	instead of `chess-engine-position'.

	* chess-engine.el (chess-pgn): Require it.
	* chess-eco.el (chess-algebraic): Same here.

	* chess-input.el (chess-display-highlight-legal)
	(chess-display-redraw, chess-display-highlight): Declare.

	* chess-ply.el (chess-ply-keyword): Add docstring.

	* chess-input.el (chess-input): New custom group.
	(chess-input-notation-type): Put into `chess-input' group.
	(chess-input-test-move): Use `chess-ply-keyword' to check for
	castling plies instead of doing a string-match on the algebraic
	notation string.

	* chess-images.el (chess-images-determine-size): Don't use
	`x-display-pixel-height' and `x-display-pixel-width' directly.

	* chess-display.el (chess-display-draw-square): Make third argument
	PIECE optional.

2014-06-29  Mario Lang  <mlang@delysid.org>

	* chess-algebraic.el (chess-algebraic-to-ply): Remove dead code.

2014-06-25  Mario Lang  <mlang@delysid.org>

	* chess-pos.el (chess-pos-search*)
	* chess-input.el (chess-input-display-moves): cl-delete-duplicates ->
	delete-dups.

	* chess-pos.el (chess-pos-piece-p, chess-pos-search*)
	(chess-search-position)
	* chess-ply.el (chess-ply-create, chess-legal-plies)
	* chess-plain.el (chess-plain-piece-text)
	* chess-fen.el (chess-pos-to-fen)
	* chess-display.el (chess-display-select-piece)
	* chess-algebraic.el (chess-algebraic-to-ply): Use `=' instead of `eq'
	to compare pieces.

2014-06-24  Mario Lang  <mlang@delysid.org>

	* chess-ply.el (chess-ply-p): New function.